# pnpf_uncalibrated_lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  accuracyTest.cpp  bench.cpp  datagen.cpp  datagen.h  runFunctions.h  simple_test.cpp  test.cpp
datagen/: CMakeLists.txt  datagen.cpp  datagen.h
ex/: CMakeLists.txt
p35p_solver_double/: CMakeLists.txt  anyNonFinite.cpp  anyNonFinite.h  buildInfo.mat  cat.cpp  cat.h  codeInfo.mat  eig.cpp  eig.h  equations_for_groebner.cpp  equations_for_groebner.h  find_f.cpp  find_f.h  gcGuiReport.mat  init_F.cpp  init_F.h  isfinite.cpp  isfinite.h  ishermitian.cpp  ishermitian.h  make_mult_matrix.cpp  make_mult_matrix.h  mldivide.cpp  mldivide.h  mult_for_groebner.cpp  mult_for_groebner.h  mult_poly22.cpp  mult_poly22.h  mult_poly42.cpp  mult_poly42.h  p35pDouble.sln  p35pDouble.vcxproj  p35pDouble.vcxproj.filters  p35p_solver.cpp  p35p_solver.h  p35p_solver_initialize.cpp  p35p_solver_initialize.h  p35p_solver_rtw.mk  p35p_solver_rtwutil.cpp  p35p_solver_rtwutil.h  (+67 more)
p35p_solver_double/examples/: main.cpp  main.h
p35p_solver_double/html/: report.mldatx
p35p_solver_double/interface/: _coder_p35p_solver_api.c  _coder_p35p_solver_api.h  _coder_p35p_solver_info.c  _coder_p35p_solver_info.h  _coder_p35p_solver_mex.h
p35p_solver_single/: buildInfo.mat  cat.cpp  cat.h  codeInfo.mat  eig.cpp  eig.h  find_f.cpp  find_f.h  isfinite.cpp  isfinite.h  make_mult_matrix.cpp  make_mult_matrix.h  mldivide.cpp  mldivide.h  mult_for_groebner.cpp  mult_for_groebner.h  p35pSingle.sln  p35pSingle.vcxproj  p35pSingle.vcxproj.filters  p35p_solver.cpp  p35p_solver.h  p35p_solver_rtw.bat  p35p_solver_rtw.mk  p35p_solver_rtwutil.cpp  p35p_solver_rtwutil.h  p35p_solver_terminate.cpp  p35p_solver_terminate.h  p35p_solver_types.h  qr.cpp  qr.h  rsf2csf.cpp  rsf2csf.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  (+46 more)
p35p_solver_single/examples/: main.cpp  main.h
p35p_solver_single/html/: report.mldatx
p35p_solver_single/interface/: _coder_p35p_solver_api.c  _coder_p35p_solver_api.h  _coder_p35p_solver_info.c  _coder_p35p_solver_mex.cpp
pnp/: p35p_solver.h  p4p_solver.h
pnpf/: CMakeLists.txt  buildInfo.mat  pnpf.cpp  pnpf.h  pnpf_solvers.h  pnpf_types.h  rtw_proj.tmw  rtwtypes.h  solvers.h
pnpf/include/pnpf/: pnpf.h  solvers.hpp
pnpf/src/: pnpf.cpp
solve_P4Pf_double/: anyNonFinite.cpp  anyNonFinite.h  buildInfo.mat  codeInfo.mat  det.cpp  det.h  eig.cpp  eig.h  find_M.cpp  find_M.h  find_T.cpp  find_T.h  find_eqs.cpp  find_eqs.h  gcGuiReport.mat  isfinite.cpp  isfinite.h  qr.cpp  qr.h  recip.cpp  recip.h  roots.cpp  roots.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  schur.cpp  schur.h  solve_3Q3.cpp  solve_3Q3.h  solve_P4Pf.cpp  solve_P4Pf.h  solve_P4Pf_rtw.bat  solve_P4Pf_rtw.mk  solve_P4Pf_rtwutil.cpp  (+46 more)
solve_P4Pf_double/examples/: main.cpp  main.h
solve_P4Pf_double/html/: report.mldatx
solve_P4Pf_double/interface/: _coder_solve_P4Pf_api.c  _coder_solve_P4Pf_api.h  _coder_solve_P4Pf_info.c  _coder_solve_P4Pf_info.h  _coder_solve_P4Pf_mex.h
solve_P4Pf_mixed/: anyNonFinite.cpp  anyNonFinite.h  buildInfo.mat  codeInfo.mat  det.cpp  det.h  gcGuiReport.mat  qr.cpp  qr.h  recip.cpp  recip.h  roots.cpp  roots.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  schur.cpp  schur.h  solve_3Q3.cpp  solve_3Q3.h  solve_P4Pf.cpp  solve_P4Pf.h  solve_P4Pf_initialize.cpp  solve_P4Pf_initialize.h  solve_P4Pf_rtw.mk  solve_P4Pf_rtwutil.cpp  solve_P4Pf_rtwutil.h  solve_P4Pf_terminate.h  solve_P4Pf_types.h  sqrt.cpp  sqrt.h  svd.cpp  svd.h  xaxpy.cpp  xaxpy.h  (+28 more)
solve_P4Pf_mixed/examples/: main.cpp
solve_P4Pf_mixed/html/: report.mldatx
solve_P4Pf_mixed/interface/: _coder_solve_P4Pf_api.c  _coder_solve_P4Pf_api.h  _coder_solve_P4Pf_info.c  _coder_solve_P4Pf_mex.cpp
tests/: CMakeLists.txt  data_generation.hpp  pnpf_benchmark.cpp  pnpf_test.cpp  test_helper.hpp
